--- a/web/administrarMesas.xhtml
+++ b/web/administrarMesas.xhtml
@@ -1,39 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form>
-            Indique el numero de mesas a agregar: <h:inputText value="#{mesaController.cantidad}" /> <br/>
-            <h:commandButton id="generarMButton" value="generar mesas" actionListener="#{mesaController.generarMesas()}" /> <br/>
-            <h:message for="generarMButton"/>
-            <c:if test="#{!mesaController.existenRegistros()}">
-                no existen registors!!
-            </c:if>
-            <h:dataTable value="#{mesaController.items}" var="mesa">
-                <h:column>
-                    <f:facet name="header">Numero</f:facet>
-                    <h:outputText value="#{mesa.numero}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Mozo</f:facet>
-                    <h:outputText value="#{mesa.mozo.nombre}"/>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Estado</f:facet>
-                    <h:outputText value="#{mesa.activo}"/>
-                </h:column>
-            </h:dataTable>
+        
+        <h:form id="form">
+            <h:selectOneMenu id="sm" value="#{mozoController.selected}" converter="DDLConverter">
+                <f:selectItems id="si" value="#{mozoController.items}" var="mozo" itemLabel="#{mozo.nombre} #{mozo.apellido}"  itemValue="#{mozo}" noSelectionValue="Selecciona un mozo"/>
+            </h:selectOneMenu>
+            <h:outputLabel value="#{mozoController.selected.nombre} #{mozoController.selected.apellido}"/>
+            <h:commandButton />
         </h:form>
     </h:body>
 </html>
